fix(venue): align venue name

--- a/src/pages/venue.module.scss
+++ b/src/pages/venue.module.scss
@@ -39,6 +39,7 @@
   }
 
   .venue-name {
+    margin-left: -0.125rem;
     font-size: 2.25rem;
     font-weight: 800;
     color: $theme-palette-secondary;
